--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.blackcj.customkeyboard"
     android:sharedUserId="I.O.T"
     android:sharedUserLabel="@string/I.O.T">
-
+    <permission android:name="com.blackcj.customkeyboard.ACCESS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:label="@string/ime_name">
         <activity android:name=".ImePreferences" android:label="@string/settings_name">
